<resources>
    <string name="app_name">TechHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_steps">%1$s / %2$s</string>
    <string name="add_course">Add Course</string>
    <string name="account">Account</string>
    <string name="search_owl">Search Owl</string>
    <string name="search_techHub">Search TechHub</string>
    <string name="choose_topics_that_interest_you">Choose topics you want to learn</string>
    <string name="settings">settings</string>
    <string name="my_courses">My Courses</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="you_ll_also_like">You\'ll Also Like</string>
    <string name="play_lesson">Play Lesson</string>
    <string name="pause_video">Pause Video</string>
    <string name="play_video">Play video</string>
    <string name="step_num">Step %1$d</string>
    <string name="explore">Explore</string>
    <string name="join_now">Join now</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="techHub_support_email">techhubsupport@jonareas.com</string>
    <string name="techHub_support_cell_number">(+505) 1800-2020</string>
    <string name="disclaimer">By creating an account, you accept TechHub\'s Terms of Service and Privacy Policy.</string>
    <string name="contact_us">Contact Us</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_into_your_account">Log into your account</string>

    <!--sample data-->
    <string name="course_desc">This video course introduces the photography of structures, including urban and rural buildings, monuments, and less traditional structures. Instruction includes the handling of equipment and methods used to capture building interiors and exteriors. The discussion will be about the handling of distortion, varied light sources, and perspective.</string>
    <string name="what_you_ll_need">What You\'ll Need:</string>
    <string name="needs">• DSLR or manual camera\n• 24mm wide angle lens\n• Tripod</string>
    <string name="step_0">Identify the right aperture for your scene\'s depth of field to achieve the best clarity. Use a narrower aperture so that the entire scene remains in focus.</string>
    <string name="step_1">Frame the subject of your landscape by making use of the lines and angles present in your scene. Look out for curves, textures, triangles, thirds, and other shapes that improve your composition.</string>
    <string name="step_2">Find the time of the day with the best light conditions for your scene. Balance the light sources in your composition so that both light and shadows are present, adding depth, texture, and scale to your landscape.</string>


</resources>
