<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimarySurface"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_standard"
        android:paddingBottom="@dimen/margin_extreme"
        android:theme="@style/Owl.Light"
        tools:context=".ui.mycourses.MyCoursesFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height_default"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_theme_rounded"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:layout_marginBottom="@dimen/margin_low"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_name"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name"
           app:layout_constraintBottom_toTopOf="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_name"
            android:layout_marginBottom="@dimen/margin_standard">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_standard"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_password"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extreme"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/register"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_create_new_account"
            android:layout_marginTop="@dimen/margin_standard"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@string/disclaimer"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
